--- a/src/assets/scss/layout/_sidebar.scss
+++ b/src/assets/scss/layout/_sidebar.scss
@@ -1632,6 +1632,7 @@
                 width: 100%;
                 padding: 0 20px;
                 position: relative;
+                text-align: left;
 
                 &.active{
                     .sidebar-link{
