update chart page and card header style

--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -17,7 +17,7 @@
 
   .card-header {
     background-color: $card-header-bg-color;
-    padding: $card-padding;
+    // padding: $card-padding;
     border-bottom: $card-border-color;
     border-top-left-radius: $card-border-radious;
     border-top-right-radius: $card-border-radious;
