update header responsive

--- a/src/assets/scss/themes/_responsive.scss
+++ b/src/assets/scss/themes/_responsive.scss
@@ -3254,12 +3254,6 @@
     }
   }
 
-  .profile-media {
-    .media-body {
-      display: none;
-    }
-  }
-
   .form-inline {
     .form-group:not(.form-control-search) {
       width: 100%;
@@ -4165,6 +4159,10 @@
 }
 
 @media only screen and (max-width: 575.98px) {
+  .header_app_name {
+    margin-left: 15px;
+  }
+
   .drag-drop-vue {
     div {
       div {
@@ -4398,7 +4396,6 @@
     }
   }
 
-
   .bookmark {
     ul {
       li {
@@ -4414,6 +4411,17 @@
         }
       }
     }
+  }
+
+  .profile-media {
+    .media-body.notifi,
+    .profile-dropdown.onhover-show-div.notifi-menu {
+      display: none;
+    }
+  }
+
+  .profile-dropdown.onhover-show-div.notifi-menu {
+    display: none;
   }
 
   .page-wrapper .page-header .header-wrapper .nav-right>ul>li {
