update sidebar padding top

--- a/src/assets/scss/layout/_sidebar.scss
+++ b/src/assets/scss/layout/_sidebar.scss
@@ -2936,6 +2936,7 @@
 
         .sidebar-main {
           .sidebar-links {
+            padding-top: 50px;
             height: calc(100vh - 160px);
           }
         }
