add Cashier buttons on the cart page

--- a/src/assets/scss/pages/_order-history.scss
+++ b/src/assets/scss/pages/_order-history.scss
@@ -137,6 +137,12 @@
   }
 }
 
+.cashier-btn-group {
+  .btn {
+    min-width: 100px;
+  }
+}
+
 @media only screen and (max-width: 1199px) {
   .order-history {
     table {
