--- a/src/assets/scss/pages/_page.scss
+++ b/src/assets/scss/pages/_page.scss
@@ -51,3 +51,64 @@ $warning-color;
 /**=====================
      32. pagination CSS Ends
 ==========================**/
+
+
+.pos_custom_table {
+  .card {
+    border-radius: 0;
+
+    .card-body {
+      padding: 0;
+
+      .tabs.tabbed-card {
+
+        ul {
+          position: relative;
+          left: 0 !important;
+          top: 8px !important;
+          padding: 5px;
+          margin-bottom: 10px;
+        }
+
+        .row {
+          margin-left: 0;
+          margin-right: 0;
+
+          table {
+  
+            thead {
+  
+              tr{
+  
+                th{
+                  padding: 5px;
+                }
+              }
+            }
+  
+            tbody {
+  
+              tr {
+  
+                td {
+                  padding: 5px;
+
+                  .btn-group {
+
+                    ul.dropdown-menu {
+                      border: 1px solid rgba(0, 0, 0, 0.15);
+                    }
+                  }
+                }
+              }
+            }
+          }
+
+          .table-responsive.vue-smart {
+            text-align: center;
+          }
+        }
+      }      
+    }
+  }
+}
