update cashier page with adding hold order list

--- a/src/assets/scss/pages/_page.scss
+++ b/src/assets/scss/pages/_page.scss
@@ -144,3 +144,21 @@ $warning-color;
     display: inline-block;
   }
 }
+
+//cashier hold orders
+.custom_hold_order {
+  h6 {
+    margin-bottom: 0;
+  }
+  
+  .prooduct-details-box {
+    margin-bottom: 0;
+  }
+
+  .card.hold_cards {
+    margin-top: 53px;
+    .card-body {
+      padding: 15px;
+    }
+  }
+}
