responsive cashier page

--- a/src/assets/scss/pages/_page.scss
+++ b/src/assets/scss/pages/_page.scss
@@ -73,7 +73,8 @@ $warning-color;
         a.new_order_link {
           position: absolute;
           top: 20px;
-          left: 130px;
+          // left: 130px;
+          right: 20px;
           background: #eae8ff;
           color: #7366ff;
           padding: 5px;
